[package]
name = "dirseal"
version = "0.1.0"
edition = "2021"
description = "Deterministic directory packer: tar.zst with BLAKE3 manifest, verify & diff"
license = "MIT OR Apache-2.0"
repository = "https://example.com/dirseal"
keywords = ["cli", "archive", "zstd", "blake3", "deterministic"]
categories = ["command-line-utilities", "compression"]

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"


